test/syntax/valid/21_parallel_call_with_block.sg
// A single call can run in parallel with a sequential block.
import io

io.print("a"), {
    io.print("b")
    io.print("c")
}
