test/syntax/errors/10_missing_module_name.sg
// expect-error: parse error
// A call must start with a module name before the dot.
import io

.print("hello")
